# rycharger

./: Cargo.toml  Dockerfile  README.md  flake.nix  install.sh  result
examples/: retrain.rs  visualize.rs
nix/: module.nix
src/: collection.rs  config.rs  daemon.rs  lib.rs  main.rs  model.rs  storage.rs
src/model/: gradient_boosted_tree.rs  logistic_regression.rs
