[package]
name = "rycharger"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
